# gstd

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.txt  LICENSE_MIT.txt  README.md  gstd_format.txt
gstd/: crc32.c  crc32.h  gstd.cpp  gstddec_decompressor_state.h  gstddec_fsetab_predefined.h  gstddec_kernel.cpp  gstddec_kernel.inl  gstddec_kernel_cpp.cpp  gstddec_kernel_cpp_api.cpp  gstddec_prefix_cpp.h  gstddec_proto_cpp.h  gstddec_public_constants.h
modules/libdeflate/: COPYING  Makefile  Makefile.msc  README.md  libdeflate.h
modules/libdeflate/common/: common_defs.h  compiler_gcc.h
modules/libdeflate/lib/: deflate_compress.c  deflate_constants.h  deflate_decompress.c  gdeflate_compress.c  gdeflate_decompress.c  gdeflate_decompress_template.h  matchfinder_common.h
modules/libdeflate/lib/x86/: decompress_impl.h
modules/libdeflate/programs/: benchmark.c
